// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Tag ui default: Component: Tag => ui => default 1`] = `
<span
  className="tag"
>
  Maarten
</span>
`;

exports[`Component: Tag ui with type: Component: Tag => ui => with type 1`] = `
<span
  className="tag tag-success"
>
  Maarten
</span>
`;
